--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <script src="javascripts/all.js"></script>
   </head>
 
-  <body class="index" data-languages="[&quot;javascript&quot;]">
+  <body class="index" data-languages="[&quot;http&quot;,&quot;shell&quot;]">
     <a href="#" id="nav-button">
       <span>
         NAV
@@ -211,7 +211,8 @@
     <div class="toc-wrapper">
       <img src="images/logo.png" class="logo" alt="Logo" />
         <div class="lang-selector">
-              <a href="#" data-language-name="javascript">javascript</a>
+              <a href="#" data-language-name="http">http</a>
+              <a href="#" data-language-name="shell">shell</a>
         </div>
         <div class="search">
           <input type="text" class="search" id="input-search" placeholder="Search">
@@ -252,22 +253,28 @@
 <p>For example to create a corpus named <code>mycorpus</code> just <code>POST</code> a JSON table description to the URL <a href="http://localhost:1189/mycorpus/create">http://localhost:1189/mycorpus/create</a> .</p>
 
 <p>The JSON table description defines both the columns &amp; column sets in the table;</p>
-<pre class="highlight javascript tab-javascript"><code><span class="p">{</span>
-  <span class="s2">"name"</span><span class="p">:</span> <span class="s2">"tokens"</span><span class="p">,</span>
-  <span class="s2">"sets"</span><span class="p">:</span> <span class="p">[</span>
-    <span class="p">{</span>
-      <span class="s2">"name"</span><span class="p">:</span> <span class="s2">"text"</span>
-      <span class="s2">"type"</span><span class="p">:</span> <span class="s2">"ZIPFIAN"</span><span class="p">,</span>
-      <span class="s2">"indexed"</span><span class="p">:</span> <span class="kc">true</span><span class="p">,</span>
-      <span class="s2">"columns"</span><span class="p">:</span> <span class="p">[{</span><span class="s2">"name"</span><span class="p">:</span> <span class="s2">"token"</span><span class="p">}]</span>
-    <span class="p">}</span>
-  <span class="p">]</span>
-<span class="p">}</span>
+<pre class="highlight http tab-http"><code><span class="err">
+</span><span class="nf">POST</span> <span class="nn">/mycorpus/create</span> <span class="k">HTTP</span><span class="o">/</span><span class="m">1.1</span>
+<span class="na">Host</span><span class="p">:</span> <span class="s">localhost:1189</span>
+<span class="na">Content-Type</span><span class="p">:</span> <span class="s">application/json</span>
+
+<span class="p">{</span><span class="w">
+  </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"tokens"</span><span class="p">,</span><span class="w">
+  </span><span class="s2">"sets"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
+    </span><span class="p">{</span><span class="w">
+      </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"text"</span><span class="w">
+      </span><span class="s2">"type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"ZIPFIAN"</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"indexed"</span><span class="p">:</span><span class="w"> </span><span class="kc">true</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"columns"</span><span class="p">:</span><span class="w"> </span><span class="p">[{</span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"token"</span><span class="p">}]</span><span class="w">
+    </span><span class="p">}</span><span class="w">
+  </span><span class="p">]</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre><pre class="highlight shell tab-shell"><code>curl -H <span class="s2">"Content-Type: application/json"</span> -X POST localhost:1189/mycorpus/create -d <span class="s2">"</span><span class="nv">$JSON</span><span class="s2">"</span>
 </code></pre>
 <p>This will create a table named <code>tokens</code> containing a single column set and a single column named <code>token</code>. The <code>type</code> property specifies that the data in the column set is zipfian in nature and the <code>&quot;indexed&quot;: true</code> ensures an index is built on the column set.</p>
 <h2 id='command-line'>Command Line</h2>
 <p>With the above config saved to the file <code>config.json</code> you can use <code>curl</code> to <code>POST</code> the request.</p>
-<pre class="highlight plaintext"><code>curl -H "Content-Type: application/json" -X POST -d @config.json localhost:1189/mycorpus/create &gt; response.json
+<pre class="highlight plaintext"><code>
 </code></pre>
 <p><code>response.json</code> will contain details as to if the corpus and table were created successfully.</p>
 <h1 id='inserting-data'>Inserting Data</h1>
@@ -351,7 +358,8 @@ The response will be saved to <code>response.json</code> which will tell you if 
       </div>
       <div class="dark-box">
           <div class="lang-selector">
-                <a href="#" data-language-name="javascript">javascript</a>
+                <a href="#" data-language-name="http">http</a>
+                <a href="#" data-language-name="shell">shell</a>
           </div>
       </div>
     </div>
